--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,12 @@
-/* styles go here */
+.one:not(:last-child) {
+  display: block;
+  margin-bottom: 10px;
+}
+
+fieldset {
+  margin-bottom: 20px;
+}
+
+.button {
+  margin-bottom: 20px;
+}
